2003-10-16  Johan Rydberg  <jrydberg@night.trouble.net>

	* powerpc/l4/bits/stubs-init.h (__L4_SETUP_SYSCALL): Do correct
	relocation (that means none).

	* powerpc/l4/bits/syscall.h (__L4_PPC_XCLOB): Add ctr and lr.

2003-10-05  Marcus Brinkmann  <marcus@gnu.org>

	* l4/kip.h: Include <l4/math.h>.
	(l4_min_page_size_log2): Reimplement using l4_lsb().

	* l4/math.h (l4_msb): Use __builtin_expect for optimization.
	(l4_lsb): Likewise.

2003-09-25  Marcus Brinkmann  <marcus@gnu.org>

	* powerpc/l4/bits/syscall.h (_L4_EXTERN_STUBS): Define macro and
	include <l4/bits/stubs.h>.  Then undefine it.
	* powerpc/l4/bits/stubs.h: Only error if _L4_EXTERN_STUBS is not
	defined.
	(_L4_EXTERN): New macro.
	(__l4_syscall_stub_t): Define as macro and only add typedef if it
	is not defined yet.
	Use _L4_EXTERN to prefix all system stubs declarations.

	* powerpc/l4/bits/syscall.h (l4_kernel_interface): Remove clobber
	list.

	* powerpc/l4/bits/syscall.h (l4_kernel_interface): Fix setting
	return variables.
	(l4_exchange_registers): Fix typo.
	(l4_space_control): Fix cut and paste bug and use .raw member to
	access fpages and thead ID objects.
	(l4_ipc): Remove superfluous comma.
	(l4_lipc): Likewise.
	* powerpc/l4/bits/math.h (__l4_msb): Add missing name parameter
	for input constraint.
	Submitted by Maurizio Boriani <debauxit@yahoo.it>.

2003-09-25  Marcus Brinkmann  <marcus@gnu.org>

	* l4/types.h (_L4_BITFIELD5): Fix macro definition.

2003-09-24  Maurizio Boriani  <debauxit@yahoo.it>
 
	* l4/types.h (_L4_BITFIELD4): Fix macro definition.
	(_L4_BITFIELD6): Was defined twice.  The second instance is
	renamed to ...
	(_L4_BITFIELD7): ... this.

2003-09-22  Marcus Brinkmann  <marcus@gnu.org>

	* headers.m4: Add arch-dependent files using a shell variable.
	* headers-ia32.m4, headers-powerpc.m4: Files removed.

	* Makefile.am (ARCH_SUBDIR) [ARCH_POWERPC]: Add powerpc.
	* headers-powerpc.m4: New file.
	* powerpc/Makefile.am: New file.